--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
+    "@mui/x-date-pickers": "^6.19.7",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@tailwindcss/forms": "^0.5.9",
+    "@videosdk.live/react-sdk": "^0.1.105",
     "antd": "^5.22.6",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cra-template": "1.2.0",
+    "date-fns": "^2.30.0",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
     "nexus_collab_frontend": "file:",
@@ -30,6 +33,7 @@
     "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.2",
     "recharts": "^2.15.0",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
   },
