--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^6.18.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.2",
